// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`bindings vue codegen snapshot per primitive: vue:aspect-ratio 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/aspect-ratio/aspect-ratio.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "ratio", attr \`data-variant\`). */
export type LAspectRatioVariant = "square" | "16-9" | "4-3" | "3-2" | "21-9" | "portrait";

export interface LAspectRatioProps {
  /** \`data-variant\`; omitted when unset (manifest default: "square"). */
  variant?: LAspectRatioVariant;
}

/** \`aspect-ratio\` — CSS wrapper that locks a child (image, video, iframe) to a fixed width-to-height ratio and crops the overflow */
export const LAspectRatio = defineFaqirPrimitive<LAspectRatioProps>({
  name: "aspect-ratio",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["square", "16-9", "4-3", "3-2", "21-9", "portrait"] },
  ],
  states: [],
  slots: [],
  defaultSlot: true,
});

export default LAspectRatio;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:avatar 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/avatar/avatar.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LAvatarSize = "sm" | "md" | "lg";

export interface LAvatarProps {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LAvatarSize;
}

/** \`avatar\` — User avatar with image and fallback initials */
export const LAvatar = defineFaqirPrimitive<LAvatarProps>({
  name: "avatar",
  tag: "span",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [],
  slots: [
    { name: "image", tag: "img", required: false, isVoid: true },
    { name: "fallback", tag: "span", required: true, isVoid: false },
  ],
  defaultSlot: false,
});

export default LAvatar;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:badge 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/badge/badge.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "visual", attr \`data-variant\`). */
export type LBadgeVariant = "default" | "primary" | "secondary" | "destructive" | "success" | "warning";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LBadgeSize = "sm" | "md" | "lg";

export interface LBadgeProps {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LBadgeVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LBadgeSize;
}

/** \`badge\` — Small status indicator with color variants */
export const LBadge = defineFaqirPrimitive<LBadgeProps>({
  name: "badge",
  tag: "span",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["default", "primary", "secondary", "destructive", "success", "warning"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [],
  slots: [],
  defaultSlot: true,
});

export default LBadge;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:breadcrumb 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/breadcrumb/breadcrumb.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LBreadcrumbSize = "sm" | "md" | "lg";

export interface LBreadcrumbProps {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LBreadcrumbSize;
}

/** \`breadcrumb\` — Breadcrumb trail — a <nav aria-label="Breadcrumb"> with link items, presentational separators, and the current page marked aria-current="page" */
export const LBreadcrumb = defineFaqirPrimitive<LBreadcrumbProps>({
  name: "breadcrumb",
  tag: "nav",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [],
  slots: [
    { name: "list", tag: "ol", required: false, isVoid: false },
    { name: "item", tag: "a", required: false, isVoid: false },
    { name: "separator", tag: "li", required: false, isVoid: false },
    { name: "current", tag: "span", required: true, isVoid: false },
  ],
  defaultSlot: false,
});

export default LBreadcrumb;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:button 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/button/button.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "visual", attr \`data-variant\`). */
export type LButtonVariant = "default" | "primary" | "secondary" | "destructive" | "ghost" | "outline" | "link";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LButtonSize = "sm" | "md" | "lg";

export interface LButtonProps {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LButtonVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LButtonSize;
  /** Sets \`data-state="loading"\`. */
  loading?: boolean;
  /** Sets the \`disabled\` attribute. */
  disabled?: boolean;
}

/** \`button\` — Interactive button with multiple visual variants and sizes */
export const LButton = defineFaqirPrimitive<LButtonProps>({
  name: "button",
  tag: "button",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["default", "primary", "secondary", "destructive", "ghost", "outline", "link"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "loading", attr: "data-state", value: "loading", kind: "value" },
    { prop: "disabled", attr: "disabled", value: null, kind: "presence" },
  ],
  slots: [
    { name: "icon", tag: "span", required: false, isVoid: false },
  ],
  defaultSlot: true,
});

export default LButton;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:callout 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/callout/callout.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LCalloutVariant = "info" | "warning" | "destructive" | "success" | "muted";

export interface LCalloutProps {
  /** \`data-variant\`; omitted when unset (manifest default: "info"). */
  variant?: LCalloutVariant;
}

/** \`callout\` — Callout box for info notices, warnings, alerts, legal text, and disclaimers */
export const LCallout = defineFaqirPrimitive<LCalloutProps>({
  name: "callout",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["info", "warning", "destructive", "success", "muted"] },
  ],
  states: [],
  slots: [
    { name: "icon", tag: "span", required: false, isVoid: false },
    { name: "content", tag: "div", required: true, isVoid: false },
    { name: "title", tag: "strong", required: false, isVoid: false },
    { name: "dismiss", tag: "button", required: false, isVoid: false },
  ],
  defaultSlot: false,
});

export default LCallout;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:card 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/card/card.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "visual", attr \`data-variant\`). */
export type LCardVariant = "default" | "outlined" | "filled";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LCardSize = "sm" | "md" | "lg";

export interface LCardProps {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LCardVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LCardSize;
}

/** \`card\` — Container surface with header, body, and footer slots */
export const LCard = defineFaqirPrimitive<LCardProps>({
  name: "card",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["default", "outlined", "filled"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [],
  slots: [
    { name: "header", tag: "div", required: false, isVoid: false },
    { name: "title", tag: "h3", required: false, isVoid: false },
    { name: "description", tag: "p", required: false, isVoid: false },
    { name: "body", tag: "div", required: true, isVoid: false },
    { name: "footer", tag: "div", required: false, isVoid: false },
  ],
  defaultSlot: false,
});

export default LCard;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:checkbox 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/checkbox/checkbox.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LCheckboxSize = "sm" | "md" | "lg";

export interface LCheckboxProps {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LCheckboxSize;
  /** Sets the \`checked\` attribute. */
  checked?: boolean;
  /** Sets \`data-state="indeterminate"\`. */
  indeterminate?: boolean;
  /** Sets the \`disabled\` attribute. */
  disabled?: boolean;
}

/** \`checkbox\` — Custom styled checkbox with checked, indeterminate, disabled states and size variants */
export const LCheckbox = defineFaqirPrimitive<LCheckboxProps>({
  name: "checkbox",
  tag: "input",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "checked", attr: "checked", value: null, kind: "presence" },
    { prop: "indeterminate", attr: "data-state", value: "indeterminate", kind: "value" },
    { prop: "disabled", attr: "disabled", value: null, kind: "presence" },
  ],
  slots: [],
  defaultSlot: false,
});

export default LCheckbox;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:chip 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/chip/chip.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "visual", attr \`data-variant\`). */
export type LChipVariant = "default" | "primary" | "outline" | "destructive";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LChipSize = "sm" | "md" | "lg";

export interface LChipProps {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LChipVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LChipSize;
}

/** \`chip\` — Tag/chip with a label and an optional dismiss button */
export const LChip = defineFaqirPrimitive<LChipProps>({
  name: "chip",
  tag: "span",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["default", "primary", "outline", "destructive"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [],
  slots: [
    { name: "label", tag: "span", required: true, isVoid: false },
    { name: "dismiss", tag: "button", required: false, isVoid: false },
  ],
  defaultSlot: false,
});

export default LChip;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:collapsible 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/collapsible/collapsible.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "visual", attr \`data-variant\`). */
export type LCollapsibleVariant = "default" | "bordered";

export interface LCollapsibleProps {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LCollapsibleVariant;
  /** Sets the \`open\` attribute. */
  open?: boolean;
}

/** \`collapsible\` — Disclosure widget built on native <details>/<summary> — opens and closes with zero JavaScript, animated via ::details-content where supported */
export const LCollapsible = defineFaqirPrimitive<LCollapsibleProps>({
  name: "collapsible",
  tag: "details",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["default", "bordered"] },
  ],
  states: [
    { prop: "open", attr: "open", value: null, kind: "presence" },
  ],
  slots: [
    { name: "trigger", tag: "summary", required: true, isVoid: false },
    { name: "content", tag: "div", required: true, isVoid: false },
  ],
  defaultSlot: false,
});

export default LCollapsible;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:description-list 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/description-list/description-list.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LDescriptionListVariant = "vertical" | "horizontal";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LDescriptionListSize = "sm" | "md" | "lg";

export interface LDescriptionListProps {
  /** \`data-variant\`; omitted when unset (manifest default: "vertical"). */
  variant?: LDescriptionListVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LDescriptionListSize;
}

/** \`description-list\` — Styled description list (dl/dt/dd) for longer descriptive key-value content */
export const LDescriptionList = defineFaqirPrimitive<LDescriptionListProps>({
  name: "description-list",
  tag: "dl",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["vertical", "horizontal"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [],
  slots: [
    { name: "term", tag: "dt", required: true, isVoid: false },
    { name: "details", tag: "dd", required: true, isVoid: false },
  ],
  defaultSlot: false,
});

export default LDescriptionList;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:empty-state 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/empty-state/empty-state.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

export interface LEmptyStateProps {
}

/** \`empty-state\` — Placeholder for empty content sections with icon, title, description, and action slots */
export const LEmptyState = defineFaqirPrimitive<LEmptyStateProps>({
  name: "empty-state",
  tag: "div",
  variants: [],
  states: [],
  slots: [
    { name: "icon", tag: "span", required: false, isVoid: false },
    { name: "title", tag: "h3", required: true, isVoid: false },
    { name: "description", tag: "p", required: false, isVoid: false },
    { name: "actions", tag: "div", required: false, isVoid: false },
  ],
  defaultSlot: false,
});

export default LEmptyState;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:field-group 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/field-group/field-group.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "layout", attr \`data-variant\`). */
export type LFieldGroupVariant = "vertical" | "horizontal";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LFieldGroupSize = "sm" | "md" | "lg";

export interface LFieldGroupProps {
  /** \`data-variant\`; omitted when unset (manifest default: "vertical"). */
  variant?: LFieldGroupVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LFieldGroupSize;
  /** Sets \`data-state="invalid"\`. */
  invalid?: boolean;
  /** Sets \`data-state="validating"\`. */
  validating?: boolean;
  /** Sets \`data-state="valid"\`. */
  valid?: boolean;
  /** Sets \`data-state="disabled"\`. */
  disabled?: boolean;
}

/** \`field-group\` — Form field wrapper combining label, input slot, description, and error message, with a normalized validation contract (§7.1): states invalid | validating | disabled, a standardized required marker, and CSS-driven error visibility (no JS class toggling) */
export const LFieldGroup = defineFaqirPrimitive<LFieldGroupProps>({
  name: "field-group",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["vertical", "horizontal"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "invalid", attr: "data-state", value: "invalid", kind: "value" },
    { prop: "validating", attr: "data-state", value: "validating", kind: "value" },
    { prop: "valid", attr: "data-state", value: "valid", kind: "value" },
    { prop: "disabled", attr: "data-state", value: "disabled", kind: "value" },
  ],
  slots: [
    { name: "label", tag: "label", required: true, isVoid: false },
    { name: "required", tag: "span", required: false, isVoid: false },
    { name: "input", tag: "div", required: true, isVoid: false },
    { name: "description", tag: "p", required: false, isVoid: false },
    { name: "error", tag: "p", required: false, isVoid: false },
  ],
  defaultSlot: false,
});

export default LFieldGroup;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:grid 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/grid/grid.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`cols\` values (manifest variant group "cols", attr \`data-cols\`). */
export type LGridCols = "1" | "2" | "3" | "4" | "6" | "12";

/** Allowed \`gap\` values (manifest variant group "gap", attr \`data-gap\`). */
export type LGridGap = "2" | "4" | "6" | "8";

export interface LGridProps {
  /** \`data-cols\`; omitted when unset (manifest default: "1"). */
  cols?: LGridCols;
  /** \`data-gap\`; omitted when unset (manifest default: "4"). */
  gap?: LGridGap;
}

/** \`grid\` — CSS Grid container with configurable columns and gap */
export const LGrid = defineFaqirPrimitive<LGridProps>({
  name: "grid",
  tag: "div",
  variants: [
    { prop: "cols", attr: "data-cols", values: ["1", "2", "3", "4", "6", "12"] },
    { prop: "gap", attr: "data-gap", values: ["2", "4", "6", "8"] },
  ],
  states: [],
  slots: [],
  defaultSlot: true,
});

export default LGrid;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:icon 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/icon/icon.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`icon\` values (manifest variant group "icon", attr \`data-icon\`). */
export type LIconIcon = "activity" | "arrow-down" | "arrow-left" | "arrow-right" | "arrow-up" | "award" | "bell" | "bold" | "book" | "bug" | "calendar" | "camera" | "chart-column" | "chart-line" | "chart-pie" | "check" | "check-check" | "chevron-down" | "chevron-left" | "chevron-right" | "chevron-up" | "circle" | "circle-alert" | "circle-check" | "circle-question-mark" | "circle-user" | "circle-x" | "clipboard" | "clock" | "cloud" | "code" | "compass" | "copy" | "cpu" | "credit-card" | "database" | "dollar-sign" | "download" | "ellipsis" | "external-link" | "eye" | "eye-off" | "file" | "file-text" | "folder" | "folder-open" | "funnel" | "git-branch" | "globe" | "hash" | "heart" | "house" | "image" | "info" | "italic" | "key" | "layers" | "link" | "list" | "loader-circle" | "lock" | "lock-open" | "log-in" | "log-out" | "mail" | "map" | "map-pin" | "maximize" | "menu" | "message-circle" | "message-square" | "mic" | "minus" | "moon" | "move" | "music" | "package" | "paperclip" | "pause" | "pencil" | "phone" | "play" | "plus" | "printer" | "refresh-cw" | "save" | "search" | "send" | "server" | "settings" | "share-2" | "shield" | "shield-check" | "shopping-cart" | "skip-forward" | "sliders-horizontal" | "sparkles" | "star" | "sun" | "tag" | "target" | "terminal" | "text-align-start" | "thumbs-up" | "timer" | "trash-2" | "trending-up" | "triangle-alert" | "type" | "underline" | "upload" | "user" | "user-plus" | "users" | "video" | "volume-2" | "wallet" | "wifi" | "x" | "zap";

export interface LIconProps {
  /** \`data-icon\`; omitted when unset (manifest default: "circle"). */
  icon?: LIconIcon;
}

/** \`icon\` — CSS-only icon: a data-URI SVG rendered via mask-image on a currentColor box. Inherits text color and sizes with font-size (1em). data-icon selects the glyph from a curated Lucide (ISC) subset. Zero JavaScript, zero web requests. */
export const LIcon = defineFaqirPrimitive<LIconProps>({
  name: "icon",
  tag: "span",
  variants: [
    { prop: "icon", attr: "data-icon", values: ["activity", "arrow-down", "arrow-left", "arrow-right", "arrow-up", "award", "bell", "bold", "book", "bug", "calendar", "camera", "chart-column", "chart-line", "chart-pie", "check", "check-check", "chevron-down", "chevron-left", "chevron-right", "chevron-up", "circle", "circle-alert", "circle-check", "circle-question-mark", "circle-user", "circle-x", "clipboard", "clock", "cloud", "code", "compass", "copy", "cpu", "credit-card", "database", "dollar-sign", "download", "ellipsis", "external-link", "eye", "eye-off", "file", "file-text", "folder", "folder-open", "funnel", "git-branch", "globe", "hash", "heart", "house", "image", "info", "italic", "key", "layers", "link", "list", "loader-circle", "lock", "lock-open", "log-in", "log-out", "mail", "map", "map-pin", "maximize", "menu", "message-circle", "message-square", "mic", "minus", "moon", "move", "music", "package", "paperclip", "pause", "pencil", "phone", "play", "plus", "printer", "refresh-cw", "save", "search", "send", "server", "settings", "share-2", "shield", "shield-check", "shopping-cart", "skip-forward", "sliders-horizontal", "sparkles", "star", "sun", "tag", "target", "terminal", "text-align-start", "thumbs-up", "timer", "trash-2", "trending-up", "triangle-alert", "type", "underline", "upload", "user", "user-plus", "users", "video", "volume-2", "wallet", "wifi", "x", "zap"] },
  ],
  states: [],
  slots: [],
  defaultSlot: true,
});

export default LIcon;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:image 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/image/image.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LImageVariant = "responsive" | "thumbnail" | "cover" | "contain";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LImageSize = "xs" | "sm" | "md" | "lg" | "full";

export interface LImageProps {
  /** \`data-variant\`; omitted when unset (manifest default: "responsive"). */
  variant?: LImageVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LImageSize;
}

/** \`image\` — Responsive image with variants for different display modes and print optimization */
export const LImage = defineFaqirPrimitive<LImageProps>({
  name: "image",
  tag: "figure",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["responsive", "thumbnail", "cover", "contain"] },
    { prop: "size", attr: "data-size", values: ["xs", "sm", "md", "lg", "full"] },
  ],
  states: [],
  slots: [
    { name: "img", tag: "img", required: true, isVoid: true },
    { name: "caption", tag: "figcaption", required: false, isVoid: false },
  ],
  defaultSlot: false,
});

export default LImage;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:input 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/input/input.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LInputSize = "sm" | "md" | "lg";

export interface LInputProps {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LInputSize;
  /** Sets \`data-state="error"\`. */
  error?: boolean;
  /** Sets the \`disabled\` attribute. */
  disabled?: boolean;
}

/** \`input\` — Text input with error, disabled states and size variants */
export const LInput = defineFaqirPrimitive<LInputProps>({
  name: "input",
  tag: "input",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "error", attr: "data-state", value: "error", kind: "value" },
    { prop: "disabled", attr: "disabled", value: null, kind: "presence" },
  ],
  slots: [],
  defaultSlot: false,
});

export default LInput;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:kbd 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/kbd/kbd.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

export interface LKbdProps {
}

/** \`kbd\` — Inline keyboard shortcut key indicator */
export const LKbd = defineFaqirPrimitive<LKbdProps>({
  name: "kbd",
  tag: "kbd",
  variants: [],
  states: [],
  slots: [],
  defaultSlot: true,
});

export default LKbd;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:key-value 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/key-value/key-value.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LKeyValueVariant = "horizontal" | "vertical" | "inline";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LKeyValueSize = "sm" | "md" | "lg";

export interface LKeyValueProps {
  /** \`data-variant\`; omitted when unset (manifest default: "horizontal"). */
  variant?: LKeyValueVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LKeyValueSize;
}

/** \`key-value\` — Labeled data pair for displaying key-value information */
export const LKeyValue = defineFaqirPrimitive<LKeyValueProps>({
  name: "key-value",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["horizontal", "vertical", "inline"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [],
  slots: [
    { name: "label", tag: "dt", required: true, isVoid: false },
    { name: "value", tag: "dd", required: true, isVoid: false },
  ],
  defaultSlot: false,
});

export default LKeyValue;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:label 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/label/label.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "visual", attr \`data-variant\`). */
export type LLabelVariant = "default" | "required";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LLabelSize = "sm" | "md" | "lg";

export interface LLabelProps {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LLabelVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LLabelSize;
  /** Sets \`data-state="disabled"\`. */
  disabled?: boolean;
}

/** \`label\` — Form label with optional required/optional indicator */
export const LLabel = defineFaqirPrimitive<LLabelProps>({
  name: "label",
  tag: "label",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["default", "required"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "disabled", attr: "data-state", value: "disabled", kind: "value" },
  ],
  slots: [
    { name: "indicator", tag: "span", required: false, isVoid: false },
  ],
  defaultSlot: true,
});

export default LLabel;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:link 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/link/link.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "style", attr \`data-variant\`). */
export type LLinkVariant = "default" | "external" | "muted";

export interface LLinkProps {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LLinkVariant;
}

/** \`link\` — Styled anchor with external/muted variants; external links get a CSS-only indicator */
export const LLink = defineFaqirPrimitive<LLinkProps>({
  name: "link",
  tag: "a",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["default", "external", "muted"] },
  ],
  states: [],
  slots: [],
  defaultSlot: true,
});

export default LLink;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:nav 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/nav/nav.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LNavVariant = "horizontal" | "vertical" | "underline" | "pill";

export interface LNavProps {
  /** \`data-variant\`; omitted when unset (manifest default: "horizontal"). */
  variant?: LNavVariant;
}

/** \`nav\` — Navigation bar with link slots, active state, and horizontal/vertical/underline/pill variants */
export const LNav = defineFaqirPrimitive<LNavProps>({
  name: "nav",
  tag: "nav",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["horizontal", "vertical", "underline", "pill"] },
  ],
  states: [],
  slots: [
    { name: "link", tag: "a", required: true, isVoid: false },
    { name: "separator", tag: "div", required: false, isVoid: false },
  ],
  defaultSlot: false,
});

export default LNav;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:page-break 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/page-break/page-break.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LPageBreakVariant = "after" | "before";

export interface LPageBreakProps {
  /** \`data-variant\`; omitted when unset (manifest default: "after"). */
  variant?: LPageBreakVariant;
}

/** \`page-break\` — Print page break with visual indicator for screen editing */
export const LPageBreak = defineFaqirPrimitive<LPageBreakProps>({
  name: "page-break",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["after", "before"] },
  ],
  states: [],
  slots: [],
  defaultSlot: false,
});

export default LPageBreak;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:progress 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/progress/progress.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LProgressVariant = "default" | "success" | "warning" | "destructive";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LProgressSize = "sm" | "md" | "lg";

export interface LProgressProps {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LProgressVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LProgressSize;
}

/** \`progress\` — Progress bar with animated fill, color variants, and optional label */
export const LProgress = defineFaqirPrimitive<LProgressProps>({
  name: "progress",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["default", "success", "warning", "destructive"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [],
  slots: [
    { name: "track", tag: "div", required: true, isVoid: false },
    { name: "fill", tag: "div", required: true, isVoid: false },
    { name: "label", tag: "span", required: false, isVoid: false },
  ],
  defaultSlot: false,
});

export default LProgress;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:radio 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/radio/radio.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LRadioSize = "sm" | "md" | "lg";

export interface LRadioProps {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LRadioSize;
  /** Sets the \`checked\` attribute. */
  checked?: boolean;
  /** Sets the \`disabled\` attribute. */
  disabled?: boolean;
}

/** \`radio\` — Custom styled radio button for single selection within a group, with size variants */
export const LRadio = defineFaqirPrimitive<LRadioProps>({
  name: "radio",
  tag: "input",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "checked", attr: "checked", value: null, kind: "presence" },
    { prop: "disabled", attr: "disabled", value: null, kind: "presence" },
  ],
  slots: [],
  defaultSlot: false,
});

export default LRadio;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:select 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/select/select.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LSelectSize = "sm" | "md" | "lg";

export interface LSelectProps {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LSelectSize;
  /** Sets \`data-state="error"\`. */
  error?: boolean;
  /** Sets the \`disabled\` attribute. */
  disabled?: boolean;
}

/** \`select\` — Native select dropdown with custom arrow, error and disabled states, and size variants */
export const LSelect = defineFaqirPrimitive<LSelectProps>({
  name: "select",
  tag: "select",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "error", attr: "data-state", value: "error", kind: "value" },
    { prop: "disabled", attr: "disabled", value: null, kind: "presence" },
  ],
  slots: [],
  defaultSlot: true,
});

export default LSelect;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:separator 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/separator/separator.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "orientation", attr \`data-variant\`). */
export type LSeparatorVariant = "horizontal" | "vertical";

/** Allowed \`styleVariant\` values (manifest variant group "style", attr \`data-style\`). */
export type LSeparatorStyleVariant = "solid" | "dashed" | "dotted" | "thick";

export interface LSeparatorProps {
  /** \`data-variant\`; omitted when unset (manifest default: "horizontal"). */
  variant?: LSeparatorVariant;
  /** \`data-style\`; omitted when unset (manifest default: "solid"). */
  styleVariant?: LSeparatorStyleVariant;
}

/** \`separator\` — Horizontal or vertical divider line */
export const LSeparator = defineFaqirPrimitive<LSeparatorProps>({
  name: "separator",
  tag: "hr",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["horizontal", "vertical"] },
    { prop: "styleVariant", attr: "data-style", values: ["solid", "dashed", "dotted", "thick"] },
  ],
  states: [],
  slots: [],
  defaultSlot: false,
});

export default LSeparator;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:signature 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/signature/signature.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LSignatureSize = "sm" | "md" | "lg";

/** Allowed \`align\` values (manifest variant group "align", attr \`data-align\`). */
export type LSignatureAlign = "left" | "center" | "right";

export interface LSignatureProps {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LSignatureSize;
  /** \`data-align\`; omitted when unset (manifest default: "left"). */
  align?: LSignatureAlign;
}

/** \`signature\` — Signature line with label for printed document signing */
export const LSignature = defineFaqirPrimitive<LSignatureProps>({
  name: "signature",
  tag: "div",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
    { prop: "align", attr: "data-align", values: ["left", "center", "right"] },
  ],
  states: [],
  slots: [
    { name: "line", tag: "div", required: true, isVoid: false },
    { name: "label", tag: "span", required: true, isVoid: false },
  ],
  defaultSlot: false,
});

export default LSignature;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:skeleton 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/skeleton/skeleton.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "shape", attr \`data-variant\`). */
export type LSkeletonVariant = "text" | "circle" | "rect";

export interface LSkeletonProps {
  /** \`data-variant\`; omitted when unset (manifest default: "text"). */
  variant?: LSkeletonVariant;
}

/** \`skeleton\` — Loading placeholder with text/circle/rect variants and a shimmer animation that respects prefers-reduced-motion */
export const LSkeleton = defineFaqirPrimitive<LSkeletonProps>({
  name: "skeleton",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["text", "circle", "rect"] },
  ],
  states: [],
  slots: [],
  defaultSlot: true,
});

export default LSkeleton;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:spinner 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/spinner/spinner.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LSpinnerSize = "sm" | "md" | "lg" | "xl";

export interface LSpinnerProps {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LSpinnerSize;
}

/** \`spinner\` — Circular loading spinner with multiple sizes */
export const LSpinner = defineFaqirPrimitive<LSpinnerProps>({
  name: "spinner",
  tag: "div",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg", "xl"] },
  ],
  states: [],
  slots: [],
  defaultSlot: false,
});

export default LSpinner;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:stack 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/stack/stack.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "direction", attr \`data-variant\`). */
export type LStackVariant = "vertical" | "horizontal";

/** Allowed \`gap\` values (manifest variant group "gap", attr \`data-gap\`). */
export type LStackGap = "0" | "1" | "2" | "3" | "4" | "6" | "8";

/** Allowed \`align\` values (manifest variant group "align", attr \`data-align\`). */
export type LStackAlign = "start" | "center" | "end" | "stretch";

export interface LStackProps {
  /** \`data-variant\`; omitted when unset (manifest default: "vertical"). */
  variant?: LStackVariant;
  /** \`data-gap\`; omitted when unset (manifest default: "0"). */
  gap?: LStackGap;
  /** \`data-align\`; omitted when unset (manifest default: "stretch"). */
  align?: LStackAlign;
}

/** \`stack\` — Flexbox layout container for vertical or horizontal stacking with configurable gap and alignment */
export const LStack = defineFaqirPrimitive<LStackProps>({
  name: "stack",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["vertical", "horizontal"] },
    { prop: "gap", attr: "data-gap", values: ["0", "1", "2", "3", "4", "6", "8"] },
    { prop: "align", attr: "data-align", values: ["start", "center", "end", "stretch"] },
  ],
  states: [],
  slots: [],
  defaultSlot: true,
});

export default LStack;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:stat 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/stat/stat.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LStatSize = "sm" | "md" | "lg";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LStatVariant = "default" | "card";

/** Allowed \`trend\` values (manifest variant group "trend", attr \`data-trend\`). */
export type LStatTrend = "up" | "down" | "neutral";

export interface LStatProps {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LStatSize;
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LStatVariant;
  /** \`data-trend\`; omitted when unset (manifest default: ""). */
  trend?: LStatTrend;
}

/** \`stat\` — Large metric display with number, label, and optional change indicator */
export const LStat = defineFaqirPrimitive<LStatProps>({
  name: "stat",
  tag: "div",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
    { prop: "variant", attr: "data-variant", values: ["default", "card"] },
    { prop: "trend", attr: "data-trend", values: ["up", "down", "neutral"] },
  ],
  states: [],
  slots: [
    { name: "value", tag: "span", required: true, isVoid: false },
    { name: "label", tag: "span", required: true, isVoid: false },
    { name: "change", tag: "span", required: false, isVoid: false },
    { name: "icon", tag: "span", required: false, isVoid: false },
  ],
  defaultSlot: false,
});

export default LStat;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:stepper 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/stepper/stepper.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LStepperVariant = "horizontal" | "vertical";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LStepperSize = "sm" | "md" | "lg";

export interface LStepperProps {
  /** \`data-variant\`; omitted when unset (manifest default: "horizontal"). */
  variant?: LStepperVariant;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LStepperSize;
}

/** \`stepper\` — Step indicator with numbered circles, connectors, and labels for multi-step flows */
export const LStepper = defineFaqirPrimitive<LStepperProps>({
  name: "stepper",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["horizontal", "vertical"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [],
  slots: [
    { name: "step", tag: "div", required: true, isVoid: false },
    { name: "indicator", tag: "span", required: true, isVoid: false },
    { name: "label", tag: "span", required: false, isVoid: false },
    { name: "connector", tag: "div", required: false, isVoid: false },
  ],
  defaultSlot: false,
});

export default LStepper;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:surface 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/surface/surface.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "elevation", attr \`data-variant\`). */
export type LSurfaceVariant = "flat" | "raised" | "overlay";

/** Allowed \`size\` values (manifest variant group "padding", attr \`data-size\`). */
export type LSurfaceSize = "0" | "sm" | "md" | "lg";

export interface LSurfaceProps {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LSurfaceVariant;
  /** \`data-size\`; omitted when unset (manifest default: "0"). */
  size?: LSurfaceSize;
}

/** \`surface\` — Generic container with visual elevation and configurable padding */
export const LSurface = defineFaqirPrimitive<LSurfaceProps>({
  name: "surface",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["flat", "raised", "overlay"] },
    { prop: "size", attr: "data-size", values: ["0", "sm", "md", "lg"] },
  ],
  states: [],
  slots: [],
  defaultSlot: true,
});

export default LSurface;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:switch 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/switch/switch.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LSwitchSize = "sm" | "md" | "lg";

export interface LSwitchProps {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LSwitchSize;
  /** Sets \`data-state="on"\`. */
  on?: boolean;
  /** Sets the \`disabled\` attribute. */
  disabled?: boolean;
}

/** \`switch\` — Toggle switch with on/off states, disabled state, and size variants */
export const LSwitch = defineFaqirPrimitive<LSwitchProps>({
  name: "switch",
  tag: "button",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "on", attr: "data-state", value: "on", kind: "value" },
    { prop: "disabled", attr: "disabled", value: null, kind: "presence" },
  ],
  slots: [
    { name: "label", tag: "span", required: false, isVoid: false },
  ],
  defaultSlot: true,
});

export default LSwitch;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:text 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/text/text.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "variant", attr \`data-variant\`). */
export type LTextVariant = "default" | "muted" | "subtle" | "primary" | "mono";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LTextSize = "xs" | "sm" | "base" | "lg" | "xl" | "1" | "2" | "3" | "4" | "5" | "6";

/** Allowed \`weight\` values (manifest variant group "weight", attr \`data-weight\`). */
export type LTextWeight = "normal" | "medium" | "semibold" | "bold";

/** Allowed \`align\` values (manifest variant group "align", attr \`data-align\`). */
export type LTextAlign = "left" | "center" | "right";

/** Allowed \`leading\` values (manifest variant group "leading", attr \`data-leading\`). */
export type LTextLeading = "tight" | "snug" | "normal" | "relaxed";

export interface LTextProps {
  /** \`data-variant\`; omitted when unset (manifest default: "default"). */
  variant?: LTextVariant;
  /** \`data-size\`; omitted when unset (manifest default: "base"). */
  size?: LTextSize;
  /** \`data-weight\`; omitted when unset (manifest default: "normal"). */
  weight?: LTextWeight;
  /** \`data-align\`; omitted when unset (manifest default: "left"). */
  align?: LTextAlign;
  /** \`data-leading\`; omitted when unset (manifest default: "normal"). */
  leading?: LTextLeading;
}

/** \`text\` — Text and heading primitives with size, color, weight, alignment, and truncation via data attributes */
export const LText = defineFaqirPrimitive<LTextProps>({
  name: "text",
  tag: "p",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["default", "muted", "subtle", "primary", "mono"] },
    { prop: "size", attr: "data-size", values: ["xs", "sm", "base", "lg", "xl", "1", "2", "3", "4", "5", "6"] },
    { prop: "weight", attr: "data-weight", values: ["normal", "medium", "semibold", "bold"] },
    { prop: "align", attr: "data-align", values: ["left", "center", "right"] },
    { prop: "leading", attr: "data-leading", values: ["tight", "snug", "normal", "relaxed"] },
  ],
  states: [],
  slots: [],
  defaultSlot: true,
});

export default LText;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:textarea 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/textarea/textarea.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LTextareaSize = "sm" | "md" | "lg";

export interface LTextareaProps {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LTextareaSize;
  /** Sets \`data-state="error"\`. */
  error?: boolean;
  /** Sets the \`disabled\` attribute. */
  disabled?: boolean;
}

/** \`textarea\` — Multi-line text input with error, disabled states and size variants */
export const LTextarea = defineFaqirPrimitive<LTextareaProps>({
  name: "textarea",
  tag: "textarea",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "error", attr: "data-state", value: "error", kind: "value" },
    { prop: "disabled", attr: "disabled", value: null, kind: "presence" },
  ],
  slots: [],
  defaultSlot: true,
});

export default LTextarea;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:toggle 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/toggle/toggle.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LToggleSize = "sm" | "md" | "lg";

export interface LToggleProps {
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LToggleSize;
  /** Reflected as \`aria-pressed="true"|"false"\`. */
  pressed?: boolean;
}

/** \`toggle\` — Two-state toggle button whose pressed appearance is driven entirely by aria-pressed — CSS-only, no JavaScript */
export const LToggle = defineFaqirPrimitive<LToggleProps>({
  name: "toggle",
  tag: "button",
  variants: [
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
  ],
  states: [
    { prop: "pressed", attr: "aria-pressed", value: null, kind: "aria" },
  ],
  slots: [],
  defaultSlot: true,
});

export default LToggle;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:watermark 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\` from registry/primitives/watermark/watermark.manifest.json.
// Do not edit — regenerate with \`faqir bindings vue\`.

import { defineFaqirPrimitive } from "../runtime";

/** Allowed \`variant\` values (manifest variant group "position", attr \`data-variant\`). */
export type LWatermarkVariant = "fixed" | "absolute";

/** Allowed \`pattern\` values (manifest variant group "pattern", attr \`data-pattern\`). */
export type LWatermarkPattern = "single" | "repeated";

/** Allowed \`size\` values (manifest variant group "size", attr \`data-size\`). */
export type LWatermarkSize = "sm" | "md" | "lg";

/** Allowed \`orientation\` values (manifest variant group "orientation", attr \`data-orientation\`). */
export type LWatermarkOrientation = "diagonal" | "horizontal";

export interface LWatermarkProps {
  /** \`data-variant\`; omitted when unset (manifest default: "fixed"). */
  variant?: LWatermarkVariant;
  /** \`data-pattern\`; omitted when unset (manifest default: "single"). */
  pattern?: LWatermarkPattern;
  /** \`data-size\`; omitted when unset (manifest default: "md"). */
  size?: LWatermarkSize;
  /** \`data-orientation\`; omitted when unset (manifest default: "diagonal"). */
  orientation?: LWatermarkOrientation;
}

/** \`watermark\` — Non-interactive diagonal text overlay with single or repeated print-safe layouts */
export const LWatermark = defineFaqirPrimitive<LWatermarkProps>({
  name: "watermark",
  tag: "div",
  variants: [
    { prop: "variant", attr: "data-variant", values: ["fixed", "absolute"] },
    { prop: "pattern", attr: "data-pattern", values: ["single", "repeated"] },
    { prop: "size", attr: "data-size", values: ["sm", "md", "lg"] },
    { prop: "orientation", attr: "data-orientation", values: ["diagonal", "horizontal"] },
  ],
  states: [],
  slots: [
    { name: "mark", tag: "span", required: true, isVoid: false },
  ],
  defaultSlot: false,
});

export default LWatermark;
"
`;

exports[`bindings vue codegen snapshot per primitive: vue:index 1`] = `
"// AUTO-GENERATED by \`faqir bindings vue\`. Do not edit — regenerate instead.

export { defineFaqirPrimitive } from "./runtime";
export type { FaqirPrimitiveSpec, SpecVariant, SpecState, SpecSlot } from "./runtime";

export { LAspectRatio } from "./components/aspect-ratio";
export type { LAspectRatioProps, LAspectRatioVariant } from "./components/aspect-ratio";
export { LAvatar } from "./components/avatar";
export type { LAvatarProps, LAvatarSize } from "./components/avatar";
export { LBadge } from "./components/badge";
export type { LBadgeProps, LBadgeVariant, LBadgeSize } from "./components/badge";
export { LBreadcrumb } from "./components/breadcrumb";
export type { LBreadcrumbProps, LBreadcrumbSize } from "./components/breadcrumb";
export { LButton } from "./components/button";
export type { LButtonProps, LButtonVariant, LButtonSize } from "./components/button";
export { LCallout } from "./components/callout";
export type { LCalloutProps, LCalloutVariant } from "./components/callout";
export { LCard } from "./components/card";
export type { LCardProps, LCardVariant, LCardSize } from "./components/card";
export { LCheckbox } from "./components/checkbox";
export type { LCheckboxProps, LCheckboxSize } from "./components/checkbox";
export { LChip } from "./components/chip";
export type { LChipProps, LChipVariant, LChipSize } from "./components/chip";
export { LCollapsible } from "./components/collapsible";
export type { LCollapsibleProps, LCollapsibleVariant } from "./components/collapsible";
export { LDescriptionList } from "./components/description-list";
export type { LDescriptionListProps, LDescriptionListVariant, LDescriptionListSize } from "./components/description-list";
export { LEmptyState } from "./components/empty-state";
export type { LEmptyStateProps } from "./components/empty-state";
export { LFieldGroup } from "./components/field-group";
export type { LFieldGroupProps, LFieldGroupVariant, LFieldGroupSize } from "./components/field-group";
export { LGrid } from "./components/grid";
export type { LGridProps, LGridCols, LGridGap } from "./components/grid";
export { LIcon } from "./components/icon";
export type { LIconProps, LIconIcon } from "./components/icon";
export { LImage } from "./components/image";
export type { LImageProps, LImageVariant, LImageSize } from "./components/image";
export { LInput } from "./components/input";
export type { LInputProps, LInputSize } from "./components/input";
export { LKbd } from "./components/kbd";
export type { LKbdProps } from "./components/kbd";
export { LKeyValue } from "./components/key-value";
export type { LKeyValueProps, LKeyValueVariant, LKeyValueSize } from "./components/key-value";
export { LLabel } from "./components/label";
export type { LLabelProps, LLabelVariant, LLabelSize } from "./components/label";
export { LLink } from "./components/link";
export type { LLinkProps, LLinkVariant } from "./components/link";
export { LNav } from "./components/nav";
export type { LNavProps, LNavVariant } from "./components/nav";
export { LPageBreak } from "./components/page-break";
export type { LPageBreakProps, LPageBreakVariant } from "./components/page-break";
export { LProgress } from "./components/progress";
export type { LProgressProps, LProgressVariant, LProgressSize } from "./components/progress";
export { LRadio } from "./components/radio";
export type { LRadioProps, LRadioSize } from "./components/radio";
export { LSelect } from "./components/select";
export type { LSelectProps, LSelectSize } from "./components/select";
export { LSeparator } from "./components/separator";
export type { LSeparatorProps, LSeparatorVariant, LSeparatorStyleVariant } from "./components/separator";
export { LSignature } from "./components/signature";
export type { LSignatureProps, LSignatureSize, LSignatureAlign } from "./components/signature";
export { LSkeleton } from "./components/skeleton";
export type { LSkeletonProps, LSkeletonVariant } from "./components/skeleton";
export { LSpinner } from "./components/spinner";
export type { LSpinnerProps, LSpinnerSize } from "./components/spinner";
export { LStack } from "./components/stack";
export type { LStackProps, LStackVariant, LStackGap, LStackAlign } from "./components/stack";
export { LStat } from "./components/stat";
export type { LStatProps, LStatSize, LStatVariant, LStatTrend } from "./components/stat";
export { LStepper } from "./components/stepper";
export type { LStepperProps, LStepperVariant, LStepperSize } from "./components/stepper";
export { LSurface } from "./components/surface";
export type { LSurfaceProps, LSurfaceVariant, LSurfaceSize } from "./components/surface";
export { LSwitch } from "./components/switch";
export type { LSwitchProps, LSwitchSize } from "./components/switch";
export { LText } from "./components/text";
export type { LTextProps, LTextVariant, LTextSize, LTextWeight, LTextAlign, LTextLeading } from "./components/text";
export { LTextarea } from "./components/textarea";
export type { LTextareaProps, LTextareaSize } from "./components/textarea";
export { LToggle } from "./components/toggle";
export type { LToggleProps, LToggleSize } from "./components/toggle";
export { LWatermark } from "./components/watermark";
export type { LWatermarkProps, LWatermarkVariant, LWatermarkPattern, LWatermarkSize, LWatermarkOrientation } from "./components/watermark";
"
`;
